--- a/web/views/layout.jade
+++ b/web/views/layout.jade
@@ -64,7 +64,7 @@ html(lang="en")
                     | &times;
               div(class="modal-body")
                 |  Create a form that takes in problem name, whether user wants to
-                |  link their src file (and if so show the input for this), and
+                |  link their src file (and if so show the input for this), time/memory, and
                 |  language.
               div(class="modal-footer")
                 buton(type="button" class="btn btn-secondary" data-dismiss="modal")
